--- a/styles.css
+++ b/styles.css
@@ -82,14 +82,14 @@ ul li {
     background-color: #0056b3;
 }
 
-.categories, .products {
+.categories, .products, .mesas {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     margin: 10px 0;
 }
 
-.category {
+.category, .mesa {
     flex: 1 1 calc(50% - 10px);
     display: flex;
     justify-content: center;
@@ -97,9 +97,12 @@ ul li {
     height: 100px;
     border: 1px solid #ddd;
     border-radius: 4px;
-    background-color: #e0f7fa;
     cursor: pointer;
     text-align: center;
+}
+
+.category {
+    background-color: #e0f7fa;
 }
 
 .category:nth-child(odd) {
@@ -111,6 +114,18 @@ ul li {
 }
 
 .category:hover {
+    background-color: #b2dfdb;
+}
+
+.mesa.libre {
+    background-color: #c8e6c9;
+}
+
+.mesa.ocupada {
+    background-color: #ffecb3;
+}
+
+.mesa:hover {
     background-color: #b2dfdb;
 }
 
