--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,7 @@ button:hover {
 ul {
     list-style-type: none;
     padding: 0;
-    max-height: 300px;
-    overflow-y: auto;
+    margin: 0;
 }
 
 ul li {
@@ -94,6 +93,8 @@ ul li {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    height: calc(100vh - 200px); /* Ajusta según necesites */
+    overflow-y: auto;
 }
 
 .selection {
@@ -103,6 +104,7 @@ ul li {
 
 .order {
     flex: 1;
+    overflow-y: auto;
 }
 
 .categories, .products, .mesas {
@@ -210,5 +212,4 @@ ul li {
 
 .scrollable {
     overflow-y: auto;
-    max-height: calc(100vh - 200px); /* Ajusta según necesites */
 }
