--- a/styles.css
+++ b/styles.css
@@ -287,3 +287,9 @@ textarea {
 .mesa {
     transition: background-color 0.3s ease;
 }
+
+.terminada {
+    background-color: #d1ffd1; /* Cambia el color a un verde claro, por ejemplo */
+    border: 2px solid #00b300; /* Borde para indicar que está completado */
+}
+
