--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ h2 {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     margin-bottom: 20px;
 }
