--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ input[type="checkbox"] {
     cursor: pointer;
     transform: scale(1.2);
 }
-body {
+/*body {
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -243,7 +243,7 @@ body {
 
 .screen.active {
     display: block;
-}
+}*/
 
 h3 {
     margin-top: 0;
