--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,9 @@ h2 {
     display: block;
 }
 
-.header {
+.order-header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
 }
@@ -72,12 +72,28 @@ h2 {
     margin-top: 20px;
 }
 
-.category {
-    background-color: #d9edf7;
+.category.entradas, .product.entradas {
+    background-color: #FFEBEE; /* Light Red */
 }
 
-.product {
-    background-color: #fce4ec;
+.category.platos, .product.platos {
+    background-color: #E8F5E9; /* Light Green */
+}
+
+.category.postres, .product.postres {
+    background-color: #FFF3E0; /* Light Orange */
+}
+
+.category.bebidas, .product.bebidas {
+    background-color: #E3F2FD; /* Light Blue */
+}
+
+.category.bebidasAlcoolicas, .product.bebidasAlcoolicas {
+    background-color: #F3E5F5; /* Light Purple */
+}
+
+.category.adicionales, .product.adicionales {
+    background-color: #F9FBE7; /* Light Yellow */
 }
 
 .scrollable {
