--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ h2 {
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    gap: 20px; /* Aumentar el espacio entre los botones */
 }
 
 .footer .button-group {
@@ -332,7 +333,6 @@ ul#confirmacion-list li {
     background-color: #0056b3;
 }
 
-/* Cambios en la distribución de la pantalla de toma de órdenes */
 .container {
     display: flex;
     height: calc(100vh - 200px); /* Mantener el 100% de la altura menos la cabecera y pie */
@@ -347,18 +347,6 @@ ul#confirmacion-list li {
 .order {
     flex: 1; /* 25% del espacio total para la lista de productos seleccionados */
     overflow-y: auto;
-}
-
-/* Espacio entre botones en el footer */
-.footer {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    gap: 20px; /* Aumentar el espacio entre los botones */
-}
-
-.footer button {
-    width: 150px; /* Ajustar el tamaño de los botones si es necesario */
 }
 
 .categories, .products, .mesas {
@@ -463,6 +451,10 @@ ul#confirmacion-list li {
 
 .header {
     top: 0;
+}
+
+.footer {
+    bottom: 0;
 }
 
 .scrollable {
