--- a/styles.css
+++ b/styles.css
@@ -309,8 +309,9 @@ ul#confirmacion-list li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row; /* Mostrar cada ítem en una línea separada */
     margin-bottom: 10px;
+    flex-direction: column;
+    align-content: center;
 }
 
 .quantity-controls {
