--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,6 @@ h2 {
   background-color: #3a7bd5;
 }
 
-
 .mesas, .para-llevar, .categories, .products {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -220,7 +219,7 @@ h2 {
 .cocina-item div, .bar-item div, .caja-item div {
   margin: 5px 0;
   padding: 0px 0;
- /* border-bottom: 1px solid #eee;*/
+  /* border-bottom: 1px solid #eee; */
 }
 
 input[type="checkbox"] {
@@ -263,7 +262,7 @@ input[type="checkbox"] {
   color: #333;
 }
 
-input[type="number"], textarea {
+input[type="number"], input[type="text"], textarea {
   width: 100%;
   padding: 10px;
   font-size: 16px;
@@ -286,6 +285,7 @@ textarea {
 .mesa-info label {
   display: flex;
   align-items: center;
+  margin-right: 15px;
 }
 
 #cuentas {
@@ -345,11 +345,11 @@ textarea {
 
 @media (max-width: 768px) {
   .mesas, .para-llevar, .categories, .products {
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
   }
 
   .modal-content {
-    width: 90%;
+      width: 90%;
   }
 }
 
@@ -364,73 +364,71 @@ textarea {
 .categories {
   display: grid;
   flex-wrap: wrap;
- }
-
+}
 
 .order-content {
-display: flex;
-flex-direction: column;
-gap: 20px;
-height: calc(100vh - 200px); /* Ajusta este valor según sea necesario */
-overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  height: calc(100vh - 200px); /* Ajusta este valor según sea necesario */
+  overflow: hidden;
 }
 
 .selection-area {
-flex: 2;
-overflow-y: auto;
+  flex: 2;
+  overflow-y: auto;
 }
 
 .order-summary {
-flex: 1;
-background-color: #f8f9fa;
-padding: 20px;
-border-radius: var(--border-radius);
-box-shadow: var(--box-shadow);
-overflow-y: auto;
+  flex: 1;
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: var(--border-radius);
+  box-shadow: var(--box-shadow);
+  overflow-y: auto;
 }
 
 .mesa-info {
-display: flex;
-justify-content: center;
-margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .mesa-info label {
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 #cuentas {
-width: 60px;
-margin-left: 10px;
+  width: 60px;
+  margin-left: 10px;
 }
 
 .orden-list {
-list-style-type: none;
-padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .orden-list li {
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
 }
 
 #back-to-categories {
-display: block;
-margin: 20px auto;
-padding: 12px 24px;
-font-size: 18px;
-background-color: var(--secondary-color);
-color: white;
-border: none;
-border-radius: var(--border-radius);
-cursor: pointer;
-transition: background-color 0.3s ease;
+  display: block;
+  margin: 20px auto;
+  padding: 12px 24px;
+  font-size: 18px;
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-
 #back-to-categories:hover {
-background-color: #e69100;
+  background-color: #e69100;
 }
